base html and css reset

--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nerdflix</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
+  <link rel="stylesheet" href="src/style.css">
+  
 </head>
 <body>
-  
+  <nav class="main-nav">
+    <div class="homepage" id="homepage">Homepage</div>
+    <div class="series" id="series">Series</div>
+    <div class="movies" id="movies">Movies</div>
+    <div class="logo"></div>
+    
+  </nav>
+  <main>
+    <nav class="section-nav">  
+      <div class="search"></div>
+      <div class="sort"></div>
+      <div class="rating"></div>
+    </nav>
+
+  </main>
+
 </body>
 </html>
