generating single movie position

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
   </header>
 
   <main>
-    <header class="main-header"></header>
     <nav class="section-nav"> 
       <h1 class="section" id="section">Movies</h1>
       <input class="search" placeholder="Search for a tittle"><div class="search-icon"></div></input>
@@ -56,8 +55,13 @@
         </div>
       </div>
     </nav>
-    <section></section>
+    <section>
+      <div class="movies-display" id="movies-display">texs</div>
+    </section>
   </main>
+
+  <script type="text/javascript" src="src/imdb-top-50.json"></script>
+  <script type="text/javascript" src="src/main.js"></script>
 
 </body>
 </html>
