generating all movie position and styling

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
   
 </head>
 <body>
-
+  
   <header class="main-nav">
+    <div class="header-inside-wrapper">
+      
+    </div>
     <div class="menu">
       <div class="homepage" id="homepage">Homepage</div>
       <div class="series" id="series">Series</div>
@@ -56,7 +59,7 @@
       </div>
     </nav>
     <section>
-      <div class="movies-display" id="movies-display">texs</div>
+      <div class="movies-display" id="movies-display"></div>
     </section>
   </main>
 
